[tool.poetry]
name = "langflow-streamlit"
version = "0.1.7"
description = ""
authors = ["YAITEC <contact@yaitec.org>"]
maintainers = [
    "João Pedro M. C. Hluchan <berrytern@gmail.com>",
    "João Oliveira <joao@yaitec.org>"
]
license = "MIT"
packages = [
    {include = "langflow_streamlit"},
    {include = "langflow-streamlit"}
]

include = [
    "pyproject.toml",
]

readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.35.0"
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
langflow = "^1.0.14"
typer = "^0.12.3"
httpx = "^0.27.0"

[tool.poetry.scripts]
langflow-streamlit = "langflow_streamlit.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
