[tool.poetry]
name = "langflow-streamlit"
version = "0.1.8"
description = "A Python package with a built-in web application that bridges Langflow and Streamlit, enabling seamless integration of advanced language processing with user-friendly interfaces."
authors = ["YAITEC <contact@yaitec.org>"]
maintainers = [
    "João Pedro M. C. Hluchan <berrytern@gmail.com>",
    "João Oliveira <joao@yaitec.org>"
]
repository = "https://github.com/yaitec/langflow-streamlit"
license = "MIT"
readme = "README.md"
keywords = ["langflow", "streamlit", "langchain", "openai", "gpt", "gui"]
packages = [
    {include = "langflow_streamlit"},
    {include = "langflow-streamlit"}
]
include = [
    "pyproject.toml",
]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.35.0"
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
langflow = "^1.0.14"
typer = "^0.12.3"
httpx = "^0.27.0"
langchain-core = "0.2.30"

[tool.poetry.scripts]
langflow-streamlit = "langflow_streamlit.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "skip"
disable_error_code = ["type-var"]
namespace_packages = true
mypy_path = "langflow"
ignore_missing_imports = true
